testsite/css/masterefsaestyle.css
body {
    background: #434343;
    font-family: 'Open Sans', sans-serif;
    margin: 0;
    background-size: cover;
    padding: 0;
    left: 0px;
    right: 0px;
    margin-left: auto!important;
    margin-right: auto!important;
    max-width: 1600px!important;
    min-width: 345px;
}
.body-back {
    background: #434343;
    font-family:'Open Sans', sans-serif;
    margin: 0;
    /*overflow:hidden;*/
    max-width:1600px;
}
/*
<!--****************************************************************************************************-->
<!--****************************************************************************************************-->
<!--****************************************************************************************************-->
*/
/*Header*/
.panel {
    margin-bottom: 0px;
    background: #313335!important;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    height: 100% !important;
    width: 15.625em !important;
    transition: left 300ms ease;
    border: 0 solid transparent !important;
    border-radius: 0 !important;
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
    text-align: left;
    padding: 34px 0px 0px;
    z-index:999;
}
.exitmenu {
    margin-right: 15px;
    text-align: right;
    margin-top: -15px; 
}
.logoholder {
    position: static; 
    right: 0; 
    left: 0; 
    margin-right: auto; 
    margin-left: auto; 
    margin-top: 20px;
    margin-bottom: 15px;
    width: 170px; 
    height:95px;
}
.rev-logo {
    background: url(../images/rev-logo-white.png) no-repeat 0px 0px;
    width:100%;
    height:100%;
    background-size: cover;
}
.rev-logo:hover {
    transform: rotateY(360deg);
    background: url(../images/rev-logo-red.png) no-repeat 0px 0px;
    width:100%;
    height:100%;
    background-size: cover;
    transition:.5s all;
}
.wrap-content {
    width: 87%;
    margin: 0 auto;
}
.wrap {
    position:relative;
}
.social-icon {
    margin-top: 2em;
    text-align: center;
}
.social-icon a i {
    width: 32px;
    height: 32px;
    background:#434343 url(../images/img-sprite.png) no-repeat 0px 0px;
    display: inline-block;
    margin:0 0.2em;
    transition: 0.5s all;
    -webkit-transition: 0.5s all;
    -moz-transition: 0.5s all;
    -o-transition: 0.5s all;
    -ms-transition: 0.5s all;
    border-radius: 16px;
}
.social-icon i.icon:hover {
    background: rgb(163, 35, 0) url(../images/img-sprite.png) no-repeat 0px 0px;
    transform: rotateY(360deg);
}
.social-icon i.icon {
    background-position: 0px 0px;
}
.social-icon i.icon1 {
    background-position: -32px 0px;
}
.social-icon i.icon1:hover {
    background: rgb(163, 35, 0) url(../images/img-sprite.png) no-repeat -32px 0px;
    transform: rotateY(360deg);
}
.social-icon i.icon2 {
    background-position: -64px 0px;
}
.social-icon i.icon2:hover {
    background: rgb(163, 35, 0) url(../images/img-sprite.png) no-repeat -64px 0px;
    transform: rotateY(360deg);
}
.social-icon i.icon3 {
    background-position: -96px 0px;
}
.social-icon i.icon3:hover {
    background: rgb(163, 35, 0) url(../images/img-sprite.png) no-repeat -96px 0px;
    transform: rotateY(360deg);
}
.profile-menu {
    margin-top: 30px;
}
.profile-menu h3 {
    color: #fff;
    font-size: 1.8em;
    margin: 20px 0 10px;
}
.profile-menu a {
    color: #fff;
    font-size: 1em;
    text-decoration: none;
}
a.button {
    font-size: 1em;
    background: #434343;
    text-decoration: none;
    padding: 0.5em;
    color: #fff;
    display: block;
    width: 80%;
    margin: 1em auto;
}
.efsae-header{
    z-index: 90;
    visibility: hidden;
}
.efsae-header-accent{
    z-index: 90;
    opacity: 1;
    width: 100%;
    position: absolute;
    left: 0px;
    top: 56px;
    height: 10px;
    background-color: rgb(163, 35, 0);
}
.efsae-header-background {
    opacity: 1;
    width: 100%;
    height: 63px;
    position: absolute;
    left: 0px;
    top: 0px;
    background-color: rgb(255, 255, 255);
}
.efsae-header-left {
    position: absolute;
    left: 19px;
    top: 9px;
    z-index: 100;
    width: 346px;
    height: 43px;
}
.efsae-header-right {
    background: url(../images/logo-1.png) no-repeat 0px 0px;
    position: absolute;
    right: 250px;
    top: 9px;
    z-index: 100;
    width: 346px;
    height: 43px;
}
.efsae-header-image-holder {
    z-index: 80;
    width: 100vw;
    max-height: 750px;
    max-width: 1600px;
    min-width: 345px;
}
.efsae-header-image {
    background: url(../images/header-background.jpg) no-repeat 0px -200px;
    background-size: cover;
    z-index: 80;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -ms-background-size: cover;
    -o-background-size: cover;
    height: 36vw;
    width: 100vw;
    max-width: 1600px;
    max-height: 520px;
    min-width: 400px;
    text-align: center;
}
@media screen and (max-width: 1601px)
{
    .efsae-header-image {
        background: url(../images/header-background.jpg) no-repeat 0px -280px;
        background-size: cover;
    }
}
@media screen and (max-width: 1500px)
{
    .efsae-header-image {
        background: url(../images/header-background.jpg) no-repeat 0px -255px;
        background-size: cover;
    }
}
@media screen and (max-width: 1400px)
{
    .efsae-header-image {
        background: url(../images/header-background.jpg) no-repeat 0px -230px;
        background-size: cover;
    }
}
@media screen and (max-width: 1100px)
{
    .efsae-header-image {
        background: url(../images/header-background.jpg) no-repeat 0px -150px;
        background-size: cover;
    }
}
@media screen and (max-width: 860px)
{
    .efsae-header-image {
        background: url(../images/header-background.jpg) no-repeat 0px -120px;
        background-size: cover;
    }
}
@media screen and (max-width: 700px)
{
    .efsae-header-image {
        background: url(../images/header-background.jpg) no-repeat 0px -100px;
        background-size: cover;
    }
}
/* ... */

